log
Thu 21 Mar 2024 08:34:20 PM UTC: 
 exercises.c | 48 ++++++++++++++++++++++++++++++++++++++++++++----
 1 file changed, 44 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:52:20: error: expected expression before ‘List’
   52 |        pushCurrent(List *L, void *dato);
      |                    ^~~~
exercises.c:52:8: error: too few arguments to function ‘pushCurrent’
   52 |        pushCurrent(List *L, void *dato);
      |        ^~~~~~~~~~~
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:23:6: note: declared here
   23 | void pushCurrent(List *L, void *dato);
      |      ^~~~~~~~~~~
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:103:21: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
  103 |        int numero = top(P1);
      |                     ^~~
exercises.c:104:19: error: ‘elemento’ undeclared (first use in this function)
  104 |        push(Paux, elemento);
      |                   ^~~~~~~~
exercises.c:104:19: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:103:12: error: unused variable ‘numero’ [-Werror=unused-variable]
  103 |        int numero = top(P1);
      |            ^~~~~~
exercises.c:110:21: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
  110 |        int numero = top(Paux);
      |                     ^~~
exercises.c:110:12: error: unused variable ‘numero’ [-Werror=unused-variable]
  110 |        int numero = top(Paux);
      |            ^~~~~~
exercises.c:116:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
  116 |   return P2;
      |          ^~
exercises.c:97:6: note: declared here
   97 | void copia_pila(Stack* P1, Stack* P2)
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
abd9bb9
Thu 21 Mar 2024 08:35:20 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:103:21: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
  103 |        int numero = top(P1);
      |                     ^~~
exercises.c:104:19: error: ‘elemento’ undeclared (first use in this function)
  104 |        push(Paux, elemento);
      |                   ^~~~~~~~
exercises.c:104:19: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:103:12: error: unused variable ‘numero’ [-Werror=unused-variable]
  103 |        int numero = top(P1);
      |            ^~~~~~
exercises.c:110:21: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
  110 |        int numero = top(Paux);
      |                     ^~~
exercises.c:110:12: error: unused variable ‘numero’ [-Werror=unused-variable]
  110 |        int numero = top(Paux);
      |            ^~~~~~
exercises.c:116:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
  116 |   return P2;
      |          ^~
exercises.c:97:6: note: declared here
   97 | void copia_pila(Stack* P1, Stack* P2)
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
75b2908
Thu 21 Mar 2024 08:36:28 PM UTC: 
 exercises.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:116:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
  116 |   return P2;
      |          ^~
exercises.c:97:6: note: declared here
   97 | void copia_pila(Stack* P1, Stack* P2)
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4dadaff
Thu 21 Mar 2024 08:36:43 PM UTC: 
 exercises.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  3|2
total_score: 30/70
d65ada3
Thu 21 Mar 2024 08:42:12 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
7cd5c5e
Thu 21 Mar 2024 08:56:47 PM UTC: 
 exercises.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  0|0
5777ee6
Thu 21 Mar 2024 08:58:29 PM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|0
b7a4450
Thu 21 Mar 2024 08:58:55 PM UTC: 
 exercises.c | 11 +----------
 1 file changed, 1 insertion(+), 10 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:150:1: error: control reaches end of non-void function [-Werror=return-type]
  150 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a525488
Thu 21 Mar 2024 08:59:23 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
46b0178
Thu 21 Mar 2024 08:59:38 PM UTC: 
 exercises.c | 8 --------
 1 file changed, 8 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:138:11: error: unused variable ‘P’ [-Werror=unused-variable]
  138 |    Stack* P = create_stack();
      |           ^
cc1: all warnings being treated as errors
Compilation failed
f33414d
Thu 21 Mar 2024 08:59:45 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  4|1
total_score: 50/70
caadbd9
Thu 21 Mar 2024 09:00:39 PM UTC: 
 exercises.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
ce3e1b2
Thu 21 Mar 2024 09:01:42 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 60/70
58e66d4
Sat 23 Mar 2024 05:43:44 PM UTC: 
 exercises.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:149:29: error: ‘stack’ undeclared (first use in this function); did you mean ‘Stack’?
  149 |          char topChar = top(stack);
      |                             ^~~~~
      |                             Stack
exercises.c:149:29: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:150:18: error: subscripted value is neither array nor pointer nor vector
  150 |          if ((exp[i] == ')' && topChar != '(') || (exp[i] == ']' && topChar != '[')               || (exp[i] == '}' && topChar != '{'))
      |                  ^
exercises.c:150:55: error: subscripted value is neither array nor pointer nor vector
  150 |          if ((exp[i] == ')' && topChar != '(') || (exp[i] == ']' && topChar != '[')               || (exp[i] == '}' && topChar != '{'))
      |                                                       ^
exercises.c:150:106: error: subscripted value is neither array nor pointer nor vector
  150 |          if ((exp[i] == ')' && topChar != '(') || (exp[i] == ']' && topChar != '[')               || (exp[i] == '}' && topChar != '{'))
      |                                                                                                          ^
Compilation failed
45dddc9
Sat 23 Mar 2024 05:43:56 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:149:29: error: ‘stack’ undeclared (first use in this function); did you mean ‘Stack’?
  149 |          char topChar = top(stack);
      |                             ^~~~~
      |                             Stack
exercises.c:149:29: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
7e61614
Sat 23 Mar 2024 05:44:05 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:149:25: error: initialization of ‘char’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
  149 |          char topChar = top(P);
      |                         ^~~
cc1: all warnings being treated as errors
Compilation failed
6ff00e8
